--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -35,7 +35,7 @@ env:
   ECR_REPOSITORY: taginspo                    # set this to your Amazon ECR repository name
   ECS_SERVICE: service-taginspo             # set this to your Amazon ECS service name
   ECS_CLUSTER: cluser-taginspo                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: arn:aws:ecs:us-east-1:529710251809:task-definition/task-taginspo:1  # set this to the path to your Amazon ECS task definition
+  ECS_TASK_DEFINITION: ./aws/task-definition.json # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
   CONTAINER_NAME: container-taginspo           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
