Tested authentication and front page visibility

--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/JB012/taginspo#readme",
   "devDependencies": {
+    "@clerk/testing": "^1.13.17",
     "@playwright/test": "^1.56.1",
     "@types/node": "^24.10.1"
+  },
+  "dependencies": {
+    "path": "^0.12.7"
   }
 }
