--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "client": "cd ./client && npm run dev",
+    "server": "cd ./server && node index.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JB012/taginspo.git"
