--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "client": "cd ./client && npm run dev",
-    "server": "cd ./server && node index.js"
+    "client": "cd ./client && npm install && npm run dev",
+    "server": "cd ./server && npm install && node index.js"
   },
   "repository": {
     "type": "git",
@@ -26,7 +26,6 @@
   },
   "dependencies": {
     "dotenv": "^17.2.3",
-    "path": "^0.12.7",
-    "vite": "^7.2.4"
+    "path": "^0.12.7"
   }
 }
