--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -18,8 +18,9 @@ jobs:
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name: Run Playwright tests
-      run: npx playwright test --trace=retain-on-failure
+      run: npx playwright test
       env:
+        VITE_CLERK_PUBLISHABLE_KEY: ${{ secrets.VITE_CLERK_PUBLISHABLE_KEY }}
         CLERK_PUBLISHABLE_KEY: ${{ secrets.CLERK_PUBLISHABLE_KEY }}
         CLERK_SECRET_KEY: ${{ secrets.CLERK_SECRET_KEY }}
         TEST_USER_EMAIL: ${{ secrets.TEST_USER_EMAIL }}
