--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "path": "^0.12.7"
+    "@aws-sdk/client-s3": "^3.940.0",
+    "@aws-sdk/s3-request-presigner": "^3.940.0",
+    "@clerk/express": "^1.7.53",
+    "aws-sdk": "^2.1692.0",
+    "body-parser": "^2.2.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "fs": "^0.0.1-security",
+    "multer": "^2.0.2",
+    "mysql2": "^3.15.3",
+    "path": "^0.12.7",
+    "uuid": "^13.0.0"
   }
 }
