--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudfront": "^3.954.0",
     "@aws-sdk/client-s3": "^3.940.0",
+    "@aws-sdk/cloudfront-signer": "^3.953.0",
     "@aws-sdk/s3-request-presigner": "^3.940.0",
     "@clerk/express": "^1.7.53",
     "aws-sdk": "^2.1692.0",
