--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@aws-sdk/s3-request-presigner": "^3.940.0",
     "@clerk/express": "^1.7.53",
     "aws-sdk": "^2.1692.0",
+    "axios": "^1.13.2",
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
