--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "eslintConfig": {
+    "rules": {
+      "@typescript-eslint/no-explicit-any": "off"
+    }
+  },
   "scripts": {
     "dev": "vite --host 0.0.0.0",
     "build": "tsc -b && vite build",
@@ -19,6 +24,7 @@
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.6",
+    "react-router-dom": "^7.11.0",
     "tailwindcss": "^4.1.17",
     "uuid": "^13.0.0"
   },
