Created unique names for GitHub Actions matrix

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Download blob reports from GitHub Actions Artifacts
       uses: actions/download-artifact@v5
       with:
+        name: my-artifact-${{ matrix.os }}
         path: all-blob-reports
         pattern: blob-report-*
         merge-multiple: true
