Changed local database to Supabase

--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "@aws-sdk/cloudfront-signer": "^3.953.0",
     "@aws-sdk/s3-request-presigner": "^3.940.0",
     "@clerk/express": "^1.7.53",
+    "@supabase/supabase-js": "^2.95.3",
     "aws-sdk": "^2.1692.0",
+    "aws-sdk-js-codemod": "^3.0.2",
     "axios": "^1.13.2",
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
